objects/afl__afl_Article_Feedback__c.object
<CustomObject>
    <fields>
        <fullName>afl__Action_Date__c</fullName>
        <label>Action Taken Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>afl__Action_Due_Date__c</fullName>
        <label>Action Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>afl__Action_Taken__c</fullName>
        <label>Action Taken</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Article Archived</fullName>
                </value>
                <value>
                    <fullName>Article Updated</fullName>
                </value>
                <value>
                    <fullName>No Action Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>afl__Article_Created_Date__c</fullName>
        <label>Article Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>afl__Article_Feed_Update__c</fullName>
        <inlineHelpText>The contents of this field will appear in the Article feed internally AND in the Community if the Article is shared in a Community.</inlineHelpText>
        <label>Article Feed Update</label>
        <length>4500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>afl__Article_Link__c</fullName>
        <label>Article Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>afl__Article_Number__c</fullName>
        <label>Article Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>afl__Article_Title__c</fullName>
        <label>Article Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>afl__Article_Version__c</fullName>
        <label>Article Version</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>afl__Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>afl_Article_Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>afl__Community_Name__c</fullName>
        <label>Community Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>afl__Feedback_Reason_Developer_Value__c</fullName>
        <label>Feedback Reason (Developer Value)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>afl__Feedback_Reason__c</fullName>
        <description>Reason provided for feedback</description>
        <label>Feedback Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>afl__Feedback_Source__c</fullName>
        <label>Feedback Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Communities</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>afl__Feedback_Status__c</fullName>
        <label>Feedback Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>afl__Feedback_Vote_Description__c</fullName>
        <label>Feedback from Rating</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>afl__Feedback__c</fullName>
        <label>Feedback from Article Feed</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>afl__Internal_Notes__c</fullName>
        <label>Internal Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>afl__Is_Current_User__c</fullName>
        <formula>afl__Assigned_To__c = $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Current User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>afl__Knowledge_Article_Version_Id__c</fullName>
        <inlineHelpText>Id from the corresponding KnowledgeArticleVersion</inlineHelpText>
        <label>Knowledge Article Version Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>afl__Knowledge_kav_article_Id__c</fullName>
        <description>Holds the value of the field KnowledgeArticleId from the Knowledge__kav object. Used for register/retrieve the vote on the Vote object for a Knowledge Article</description>
        <label>Knowledge kav article Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>afl__Language__c</fullName>
        <label>Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>afl__Last_Published_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Published By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>afl_Article_Feedback_Published</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>afl__Last_Published_Date__c</fullName>
        <label>Last Published Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>afl__Like__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Like</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>afl__Originated_From_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the Article Feedback originated from the trigger</description>
        <label>Originated From Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>afl__Parent_FeedItem__c</fullName>
        <label>Parent FeedItem</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>afl__Record_Type__c</fullName>
        <label>Article Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>afl__Thumb_Vote__c</fullName>
        <label>Thumb Vote</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Thumbs_up</fullName>
                    <label>Thumbs up</label>
                </value>
                <value>
                    <fullName>Thumbs_down</fullName>
                    <label>Thumbs down</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>afl__Unlike_Reason__c</fullName>
        <label>Feedback Reason Picklist Values</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>afl__Thumb_Vote__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Enhancement suggestion</fullName>
                </value>
                <value>
                    <fullName>Information inaccurate</fullName>
                </value>
                <value>
                    <fullName>Link broken</fullName>
                </value>
                <value>
                    <fullName>Need to archive</fullName>
                </value>
                <value>
                    <fullName>Outdated  (needs update)</fullName>
                </value>
                <value>
                    <fullName>Positive feedback</fullName>
                </value>
                <value>
                    <fullName>Poorly Written (not clear)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Does not Work</fullName>
                    <isActive>false</isActive>
                    <label>Does not Work</label>
                </value>
                <value>
                    <fullName>Outdated</fullName>
                    <isActive>false</isActive>
                    <label>Outdated</label>
                </value>
                <value>
                    <fullName>Poorly Written</fullName>
                    <isActive>false</isActive>
                    <label>Poorly Written</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Article Feedback</label>
    <listViews>
        <fullName>afl__All</fullName>
        <columns>NAME</columns>
        <columns>afl__Article_Number__c</columns>
        <columns>afl__Article_Title__c</columns>
        <columns>afl__Feedback_Status__c</columns>
        <columns>afl__Assigned_To__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>afl__Action_Due_Date__c</columns>
        <columns>afl__Action_Taken__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>afl__Backlogged_Feedback</fullName>
        <columns>NAME</columns>
        <columns>afl__Article_Number__c</columns>
        <columns>afl__Article_Title__c</columns>
        <columns>afl__Feedback_Status__c</columns>
        <columns>afl__Assigned_To__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>afl__Action_Due_Date__c</columns>
        <columns>afl__Action_Taken__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>afl__Feedback_Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>Backlogged Feedback</label>
    </listViews>
    <listViews>
        <fullName>afl__My_Feedback_All</fullName>
        <columns>NAME</columns>
        <columns>afl__Article_Number__c</columns>
        <columns>afl__Article_Title__c</columns>
        <columns>afl__Feedback_Status__c</columns>
        <columns>afl__Assigned_To__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>afl__Action_Due_Date__c</columns>
        <columns>afl__Action_Taken__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>afl__Is_Current_User__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Feedback - All</label>
    </listViews>
    <listViews>
        <fullName>afl__My_Feedback_Open</fullName>
        <columns>NAME</columns>
        <columns>afl__Article_Number__c</columns>
        <columns>afl__Article_Title__c</columns>
        <columns>afl__Feedback_Status__c</columns>
        <columns>afl__Assigned_To__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>afl__Action_Due_Date__c</columns>
        <columns>afl__Action_Taken__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>afl__Feedback_Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>afl__Is_Current_User__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Feedback - Open</label>
    </listViews>
    <listViews>
        <fullName>afl__New_Feedback</fullName>
        <columns>NAME</columns>
        <columns>afl__Article_Number__c</columns>
        <columns>afl__Article_Title__c</columns>
        <columns>afl__Feedback_Status__c</columns>
        <columns>afl__Assigned_To__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>afl__Action_Due_Date__c</columns>
        <columns>afl__Action_Taken__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>afl__Feedback_Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <filters>
            <field>afl__Assigned_To__c</field>
            <operation>equals</operation>
        </filters>
        <label>New Feedback</label>
    </listViews>
    <nameField>
        <label>Article Feedback Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Article Feedback</pluralLabel>
    <recordTypes>
        <fullName>afl__recordTypeGetPicklist</fullName>
        <active>true</active>
        <description>record type needed to use get picklist values for reason picklist</description>
        <label>recordTypeGetPicklist</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>